<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primeAppBackground"
    android:orientation="vertical">

    <pl.pzienowicz.autoscrollviewpager.AutoScrollViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/primeColorPrimary" />

    <me.relex.circleindicator.CircleIndicator
        android:id="@+id/indicator"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="center"
        app:ci_drawable="@drawable/prime_onboarding_indicator_selected"
        app:ci_drawable_unselected="@drawable/prime_onboarding_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPager"
        tools:background="@color/primeTextSecondary" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="#4B4B4B"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/indicator"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Remove Ads"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:textColor="#4B616B"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/btn_continue_limited"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="Be Free, Truly Anonymous and Secured.\nUnblock Any Site.\nWith a fast VPN Connection!"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/btn_continue_limited"
        style="@style/IapInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:paddingStart="24dp"
        android:paddingTop="8dp"
        android:paddingEnd="24dp"
        android:paddingBottom="8dp"
        android:text="@string/prime_iapContinueLimited"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/trial_info_premium_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/trial_info_premium_1"
        style="@style/IapInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/prime_iapFreeTrial"
        android:textColor="@color/primeTextTitle"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/trial_info_premium_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/trial_info_premium_2"
        style="@style/IapInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/prime_iapPriceAfterFreeTrial"
        android:textColor="@color/primeTextSecondary"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/bot_area"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bot_area"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <include
            android:id="@+id/btn_continue"
            style="@style/IapContinueButton"
            layout="@layout/prime_view_bottom_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>